Ensure Map Graph does not overflow card

--- a/src/assets/graphs.css
+++ b/src/assets/graphs.css
@@ -5,6 +5,8 @@
     min-height: 340px;
     margin-bottom: 1rem; 
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+    border: 5px solid #488a99; 
+    border-radius: 8px;
 }
 
 .indv-graph-card-body {
@@ -21,6 +23,8 @@
     min-height: 380px;
     margin-bottom: 1rem; 
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+    border: 5px solid #488a99; 
+    border-radius: 8px;
 }
 
 .vega-chart {
